@@ -1,17 +1,19 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2012-03-23 09:58
+// This file was generated on 2012-08-07 15:07
 
 $extensionPath = t3lib_extMgm::extPath('ics_od_datastore');
 return array(
 	'tx_icsoddatastore_dlfile' => $extensionPath . 'downloadfile/class.tx_icsoddatastore_dlfile.php',
 	'tx_icsoddatastore_hitcounter' => $extensionPath . 'downloadfile/class.tx_icsoddatastore_hitcounter.php',
 	'tx_icsoddatastore_makelink' => $extensionPath . 'downloadfile/class.tx_icsoddatastore_makelink.php',
+	'tx_icsoddatastore_tcafeadmin' => $extensionPath . 'hook/class.tx_icsoddatastore_TCAFEAdmin.php',
 	'tx_icsoddatastore_dynflex' => $extensionPath . 'lib/class.tx_icsoddatastore_dynflex.php',
 	'tx_icsoddatastore_filecontrol' => $extensionPath . 'lib/class.tx_icsoddatastore_filecontrol.php',
 	'tx_icsoddatastore_filemanager' => $extensionPath . 'lib/class.tx_icsoddatastore_filemanager.php',
 	'tx_icsoddatastore_recordlist' => $extensionPath . 'lib/class.tx_icsoddatastore_recordlist.php',
 	'tx_icsoddatastore_sysfolder' => $extensionPath . 'lib/class.tx_icsoddatastore_sysfolder.php',
+	'tx_icsoddatastore_tcahelper' => $extensionPath . 'lib/class.tx_icsoddatastore_tcahelper.php',
 	'tx_icsoddatastore_title' => $extensionPath . 'lib/class.tx_icsoddatastore_title.php',
 	'tx_icsoddatastore_module1' => $extensionPath . 'mod1/index.php',
 	'tx_icsoddatastore_navframe' => $extensionPath . 'mod1/tx_icsoddatastore_navframe.php',
