@@ -1,3 +1,6 @@
+2012-08-07 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added filegroup's title label_userFunc.
+
 2012-08-06 Tsi YANG <tsi@in-cite.net>
 	* Feature: Adapted TCA FE Refactoring.
 
